# openmoon-ai

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  EXAMPLES.md  LICENSE  MCP.md  README.md  ROADMAP.md  VISION.md  index.html  package-lock.json  package.json  start-openmoon.sh  stop-openmoon.sh  tailwind.config.js  vite.config.ts
.cargo/: config.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  mcp_server.yml
.github/workflows/: ci.yml  release.yml
docs/: execution-plan.md  platform-and-prompt-architecture.md
mcp-servers/: config.example.json
mcp-servers/automation/: index.js  package-lock.json  package.json
mcp-servers/browser/: index.js  package-lock.json  package.json
mcp-servers/filesystem/: index.js  package-lock.json  package.json
mcp-servers/media/: index.js  package-lock.json  package.json
mcp-servers/productivity/: index.js  package-lock.json  package.json
mcp-servers/tests/: automation.test.js  browser.test.js  filesystem.test.js  functional-test-runner.js  media.test.js  productivity.test.js  test-runner.js
mcp-servers/workflows/: end-of-day.json  (+2 more)
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: system_prompt.md
src-tauri/src/: db.rs  llm.rs  logging.rs  main.rs  mcp_multi.rs  ollama.rs  permissions.rs  secrets.rs  security.rs  settings.rs  triggers.rs  web_search.rs  wifi.rs
(+39 files in other folders)
