[package]
name = "openmoon"
version = "1.0.0"
description = "Local-first, macOS-native AI agent & full MCP host"
authors = ["Marcin Jarzębowski <jarzebowski.marcin@gmail.com>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.1.0", features = ["protocol-asset", "macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-global-shortcut = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
async-openai = "0.28"
dotenv = "0.15"
base64 = "0.22"
sysinfo = "0.32"
dirs = "5.0"
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.40.0", features = ["bundled"] }
async-trait = "0.1.89"
notify = "8.2.0"
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

